# Aria-revenue-intelligence

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt
.github/workflows/: ci.yml  daily_trigger.yml
agents/: action_agent.py  analytics_agent.py  anomaly_agent.py  data_quality_agent.py  orchestrator.py
api/: dependencies.py  main.py
api/routes/: chat.py  health.py  trigger.py
config/: __init__.py  app_config.json  app_config.schema.json
dashboard/: app.py
dashboard/components/: chat_interface.py  decision_log.py  kpi_cards.py
data/: sample_sales.csv  seed_db.py
graph/: agent_graph.py  router.py  state.py
memory/: heuristics.py  semantic_store.py  short_term.py
n8n_workflows/: daily_trigger.json  escalation.json  telegram_alert.json
observability/: decision_logger.py  langsmith_setup.py  tracer.py
pipelines/: ingest_pipeline.py  monitor_pipeline.py  run_pipeline.py
safety/: __init__.py  query_timeout.py  readonly_user.sql  sql_validator.py
scripts/: manual_whatsapp_test.py
tests/: conftest.py  test_agents.py  test_graph.py  test_sql_validator.py
tools/: chart_tool.py  llm_tool.py  sql_tool.py  whatsapp_tool.py
